--- a/ci-cd-backup.yml
+++ b/ci-cd-backup.yml
@@ -21,11 +21,6 @@ on:
           - dev
           - staging
 
-# Add concurrency to prevent multiple workflows running simultaneously
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
 env:
   PYTHON_VERSION: "3.12"
   UV_LINK_MODE: copy
@@ -35,6 +30,9 @@ defaults:
     shell: bash
 
 jobs:
+  ##################################
+  # Job: Bash Linting and Testing
+  ##################################
   bash-lint:
     runs-on: ubuntu-latest
     steps:
@@ -62,6 +60,9 @@ jobs:
           chmod +x scripts/test_bash_scripts.sh
           scripts/test_bash_scripts.sh
 
+  ##################################
+  # Job: Security Scanning
+  ##################################
   security:
     runs-on: ubuntu-latest
     env:
@@ -132,6 +133,9 @@ jobs:
         with:
           sarif_file: trivy-results.sarif
 
+  ##################################
+  # Job: Linting (Python)
+  ##################################
   lint:
     runs-on: ubuntu-latest
     env:
@@ -175,6 +179,9 @@ jobs:
       - name: Run mypy type checks
         run: mypy src tests
 
+  ##################################
+  # Job: Testing with Coverage
+  ##################################
   test:
     runs-on: ubuntu-latest
     env:
@@ -223,6 +230,9 @@ jobs:
           fail_ci_if_error: false
           verbose: true
 
+  ##################################
+  # Job: Semantic Release
+  ##################################
   semantic-release:
     needs: [lint, test]
     runs-on: ubuntu-latest
@@ -258,28 +268,16 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: semantic-release publish
 
+  ##################################
+  # Job: Build (Docker Image)
+  ##################################
   build:
-    # Remove dependency on semantic-release
     needs: [security, lint, test, bash-lint]
     runs-on: ubuntu-latest
-    # Updated condition to run on pull requests and feature branch
-    if: (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/KIND_cluster_running' || github.event_name == 'pull_request') && (github.event_name == 'push' || github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch')
+    if: (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/KIND_cluster_running') && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
     env:
       UV_LINK_MODE: copy
     steps:
-      - name: Free disk space
-        run: |
-          echo "Freeing up disk space..."
-          # Remove unnecessary large packages
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf /usr/local/lib/android
-          sudo rm -rf /opt/ghc
-          sudo rm -rf /opt/hostedtoolcache/CodeQL
-          # Clear docker images
-          docker system prune -af
-          # Show available space
-          df -h
-
       - name: Checkout Repository
         uses: actions/checkout@v4
 
@@ -330,39 +328,21 @@ jobs:
           buildkitd-flags: --debug
 
       - name: Login to Docker Hub
-        if: steps.check-docker.outputs.docker_available == 'true' && github.event_name != 'pull_request'
+        if: steps.check-docker.outputs.docker_available == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Verify Docker Hub Login
-        if: steps.check-docker.outputs.docker_available == 'true' && github.event_name != 'pull_request'
+        if: steps.check-docker.outputs.docker_available == 'true'
         run: |
           echo "Verifying Docker Hub login..."
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin <<< ${{ secrets.DOCKERHUB_TOKEN }}
           curl -s -f -L -H "Authorization: Bearer ${{ secrets.DOCKERHUB_TOKEN }}" "https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/llm-rag/"
 
-      - name: Build Docker image (PR)
-        if: steps.check-docker.outputs.docker_available == 'true' && github.event_name == 'pull_request'
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: false
-          load: true
-          tags: llm-rag:latest
-          cache-from: |
-            type=local,src=/tmp/.buildx-cache
-            type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/llm-rag:buildcache
-          cache-to: |
-            type=local,dest=/tmp/.buildx-cache-new,mode=max
-          build-args: |
-            BUILDKIT_INLINE_CACHE=1
-          platforms: linux/amd64
-          provenance: false
-
-      - name: Build and push Docker image (non-PR)
-        if: steps.check-docker.outputs.docker_available == 'true' && github.event_name != 'pull_request'
+      - name: Build and push Docker image
+        if: steps.check-docker.outputs.docker_available == 'true'
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -388,7 +368,7 @@ jobs:
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
       - name: Check Docker Hub Repository
-        if: steps.check-docker.outputs.docker_available == 'true' && github.event_name != 'pull_request'
+        if: steps.check-docker.outputs.docker_available == 'true'
         run: |
           echo "Checking images on Docker Hub..."
           curl -s -H "Authorization: Bearer ${{ secrets.DOCKERHUB_TOKEN }}" "https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/llm-rag/tags/" | jq .
@@ -409,13 +389,15 @@ jobs:
           name: python-package
           path: dist/
 
+  ##################################
+  # Job: Deploy to Dev Environment
+  ##################################
   deploy-dev:
     needs: [build]
     runs-on: ubuntu-latest
     if: >
-      (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/KIND_cluster_running') &&
-      (github.event_name == 'push' ||
-       (github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_target == 'dev'))
+      github.ref == 'refs/heads/main' &&
+      (github.event_name == 'push' || (github.event_name == 'workflow_dispatch' && github.event.inputs.deploy_target == 'dev'))
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -488,8 +470,7 @@ jobs:
           chmod 600 $HOME/.kube/config
 
       - name: Verify Kubernetes connectivity (dev)
-        if: steps.check-image.outputs.image_exists == 'true' &&
-          (steps.check-config.outputs.has_config == 'true' || steps.check-config.outputs.use_kind == 'true')
+        if: steps.check-image.outputs.image_exists == 'true' && (steps.check-config.outputs.has_config == 'true' || steps.check-config.outputs.use_kind == 'true')
         id: verify-k8s
         continue-on-error: true
         run: |
@@ -546,11 +527,14 @@ jobs:
           echo "Docker image not available. Skipping deployment."
           ls -la dist/
 
+  ##################################
+  # Job: Deploy to Staging Environment
+  ##################################
   deploy-staging:
     needs: [deploy-dev]
     runs-on: ubuntu-latest
     if: >
-      (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/KIND_cluster_running') &&
+      github.ref == 'refs/heads/main' &&
       github.event_name == 'workflow_dispatch' &&
       github.event.inputs.deploy_target == 'staging'
     steps:
@@ -561,7 +545,8 @@ jobs:
         id: check-image
         continue-on-error: true
         run: |
-          if curl -s -f -L -H "Authorization: Bearer ${{ secrets.DOCKERHUB_TOKEN }}" "https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/llm-rag/tags/${{ github.sha }}" &>/dev/null; then
+          if curl -s -f -L -H "Authorization: Bearer ${{ secrets.DOCKERHUB_TOKEN }}" \
+              "https://hub.docker.com/v2/repositories/${{ secrets.DOCKERHUB_USERNAME }}/llm-rag/tags/${{ github.sha }}" &>/dev/null; then
             echo "image_exists=true" >> $GITHUB_OUTPUT
           else
             echo "image_exists=false" >> $GITHUB_OUTPUT
@@ -625,8 +610,7 @@ jobs:
           chmod 600 $HOME/.kube/config
 
       - name: Verify Kubernetes connectivity (staging)
-        if: steps.check-image.outputs.image_exists == 'true' &&
-          (steps.check-config.outputs.has_config == 'true' || steps.check-config.outputs.use_kind == 'true')
+        if: steps.check-image.outputs.image_exists == 'true' && (steps.check-config.outputs.has_config == 'true' || steps.check-config.outputs.use_kind == 'true')
         id: verify-k8s
         continue-on-error: true
         run: |
