--- a/.dockerignore
+++ b/.dockerignore
@@ -14,3 +14,20 @@ htmlcov
 dist
 build
 *.egg-info
+models/
+notebooks/
+docs/
+tests/
+test_data/
+data/
+chroma_db/
+test_chroma_db/
+synthetic_test_db/
+.llm_rag/
+quarantine_backup/
+documents/
+demos/
+junit.xml
+*.lock
+.coverage*
+.trivyignore
