--- a/k8s/kind-config.yaml
+++ b/k8s/kind-config.yaml
@@ -8,12 +8,52 @@ nodes:
     nodeRegistration:
       kubeletExtraArgs:
         node-labels: "ingress-ready=true"
+        system-reserved: "cpu=100m,memory=100Mi"
+        kube-reserved: "cpu=100m,memory=100Mi"
+        eviction-hard: "memory.available<5%"
   extraPortMappings:
-  - containerPort: 80
+  - containerPort: 8080
     hostPort: 80
     protocol: TCP
-  - containerPort: 443
+  - containerPort: 8443
     hostPort: 443
     protocol: TCP
+# Resource optimization for GitHub Actions
+kubeadmConfigPatches:
+- |
+  kind: ClusterConfiguration
+  metadata:
+    name: config
+  etcd:
+    local:
+      dataDir: "/tmp/etcd-data"
+  apiServer:
+    extraArgs:
+      "v": "2"
+  scheduler:
+    extraArgs:
+      "v": "2"
+  controllerManager:
+    extraArgs:
+      "v": "2"
+- |
+  kind: KubeletConfiguration
+  metadata:
+    name: config
+  cgroupDriver: systemd
+  failSwapOn: false
+  memorySwap: {}
+  evictionHard:
+    memory.available: "100Mi"
+    nodefs.available: "5%"
+  evictionSoft:
+    memory.available: "200Mi"
+    nodefs.available: "10%"
+  evictionSoftGracePeriod:
+    memory.available: "1m"
+    nodefs.available: "1m"
+  evictionMaxPodGracePeriod: 30
+  imageGCHighThresholdPercent: 85
+  imageGCLowThresholdPercent: 80
 - role: worker
 - role: worker
