--- a/.safety-project.ini
+++ b/.safety-project.ini
@@ -1,5 +1,1 @@
-[project]
-id = llm_rag
-url = /projects/9c67d118-2ba3-4cdd-be18-85ae1569e1f1/findings
-name = llm_rag
-
+[project]id = llm_ragurl = /projects/9c67d118-2ba3-4cdd-be18-85ae1569e1f1/findingsname = llm_rag
