fix: Update codecov badge and configuration to use correct repository name

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -229,7 +229,7 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: coverage.xml
-          slug: sm4rtm4art/llm-rag
+          slug: sm4rtm4art/LLM_Rag
           fail_ci_if_error: false
           verbose: true
 
