--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "torch>=2.1.0",
     "transformers>=4.49.0",
     "uvicorn>=0.34.0",
-    "llama-cpp-python>=0.2.56",
+    # Temporarily commented out to handle separately in Dockerfile
+    # "llama-cpp-python>=0.2.56",
     # Hugging Face dependencies
     "accelerate>=0.32.1",  # Needed for efficient model loading
     "safetensors>=0.4.2",  # For secure model loading
