--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -113,6 +113,8 @@ jobs:
           path: bandit-results.json
 
       - name: Run Safety check
+        env:
+          SAFETY_API_KEY: ${{ secrets.SAFETY_API_KEY }}
         run: safety scan --policy-file .safety-policy.yml
 
       - name: Cache Trivy DB
