Simplify CI workflow by removing UV dependency

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -97,7 +97,6 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            ~/.cache/uv
             ~/.cache/pip
             ~/.cache/pre-commit
             .pytest_cache
@@ -108,20 +107,10 @@ jobs:
             ${{ runner.os }}-python-${{ hashFiles('pyproject.toml') }}-
             ${{ runner.os }}-python-
 
-      - name: Install UV
-        run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
-
-      - name: Create and use virtual environment
-        run: |
-          uv venv .venv
-          echo "VIRTUAL_ENV=$PWD/.venv" >> $GITHUB_ENV
-          echo "$PWD/.venv/bin" >> $GITHUB_PATH
-
       - name: Install security tools
         run: |
-          .venv/bin/uv pip install bandit safety
+          python -m pip install --upgrade pip
+          pip install bandit safety
 
       - name: Run Bandit scan
         run: bandit -r src/ -c pyproject.toml -f json -o bandit-results.json
@@ -183,9 +172,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            ~/.cache/uv
             ~/.cache/pip
-            ~/.cache/pre-commit
             .pytest_cache
             ~/.cache/torch
             ~/.cache/huggingface
@@ -194,16 +181,8 @@ jobs:
             ${{ runner.os }}-python-${{ hashFiles('pyproject.toml') }}-
             ${{ runner.os }}-python-
 
-      - name: Create and use virtual environment
-        run: |
-          uv venv .venv
-          echo "VIRTUAL_ENV=$PWD/.venv" >> $GITHUB_ENV
-          echo "$PWD/.venv/bin" >> $GITHUB_PATH
-
-      - name: Install lint tools
-        run: |
-          .venv/bin/uv pip install ruff mypy
-          .venv/bin/uv pip install ".[dev]"
+      - name: Install Python dependencies
+        run: pip install -e .[dev]
 
       - name: Run Ruff format check
         run: ruff format "src/" "tests/"
@@ -234,7 +213,6 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            ~/.cache/uv
             ~/.cache/pip
             .pytest_cache
             ~/.cache/torch
@@ -244,22 +222,12 @@ jobs:
             ${{ runner.os }}-python-${{ hashFiles('pyproject.toml') }}-
             ${{ runner.os }}-python-
 
-      - name: Install UV
-        run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
-
-      - name: Create and use virtual environment
-        run: |
-          uv venv .venv
-          echo "VIRTUAL_ENV=$PWD/.venv" >> $GITHUB_ENV
-          echo "$PWD/.venv/bin" >> $GITHUB_PATH
-
       - name: Install test dependencies
         run: |
-          .venv/bin/uv pip install pytest pytest-cov pytest-asyncio
-          .venv/bin/uv pip install sentence-transformers chromadb
-          .venv/bin/uv pip install ".[dev]"
+          python -m pip install --upgrade pip
+          pip install pytest pytest-cov pytest-asyncio
+          pip install sentence-transformers chromadb
+          pip install -e ".[dev]"
 
       - name: Run tests with coverage and generate JUnit report
         run: |
@@ -342,7 +310,6 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            ~/.cache/uv
             ~/.cache/pip
             .pytest_cache
             ~/.cache/torch
@@ -352,16 +319,17 @@ jobs:
             ${{ runner.os }}-python-${{ hashFiles('pyproject.toml') }}-
             ${{ runner.os }}-python-
 
-      - name: Install UV
-        run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
+      - name: Install Python dependencies
+        run: pip install -e .[dev]
 
-      - name: Create and use virtual environment
-        run: |
-          uv venv .venv
-          echo "VIRTUAL_ENV=$PWD/.venv" >> $GITHUB_ENV
-          echo "$PWD/.venv/bin" >> $GITHUB_PATH
+      - name: Run Ruff format check
+        run: ruff format "src/" "tests/"
+
+      - name: Run Ruff linting
+        run: ruff check "src/" "tests/"
+
+      - name: Run mypy type checks
+        run: mypy src tests
 
       - name: Check Docker availability
         id: check-docker
