Restore UV integration using the official setup-uv action

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -224,10 +224,9 @@ jobs:
 
       - name: Install test dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest pytest-cov pytest-asyncio
-          pip install sentence-transformers chromadb
-          pip install -e ".[dev]"
+          uv pip install pytest pytest-cov pytest-asyncio
+          uv pip install sentence-transformers chromadb
+          uv pip install -e ".[dev]"
 
       - name: Run tests with coverage and generate JUnit report
         run: |
@@ -311,6 +310,7 @@ jobs:
         with:
           path: |
             ~/.cache/pip
+            ~/.cache/pre-commit
             .pytest_cache
             ~/.cache/torch
             ~/.cache/huggingface
@@ -319,8 +319,14 @@ jobs:
             ${{ runner.os }}-python-${{ hashFiles('pyproject.toml') }}-
             ${{ runner.os }}-python-
 
+      - name: Install UV
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+          cache-dependency-glob: "pyproject.toml"
+
       - name: Install Python dependencies
-        run: pip install -e .[dev]
+        run: uv pip install -e .[dev]
 
       - name: Run Ruff format check
         run: ruff format "src/" "tests/"
