Ensure UV is properly installed in all CI/CD jobs

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -107,10 +107,18 @@ jobs:
             ${{ runner.os }}-python-${{ hashFiles('pyproject.toml') }}-
             ${{ runner.os }}-python-
 
+      - name: Install UV
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+          cache-dependency-glob: "pyproject.toml"
+
+      - name: Install Python dependencies
+        run: uv pip install -e .[dev]
+
       - name: Install security tools
         run: |
-          python -m pip install --upgrade pip
-          pip install bandit safety
+          uv pip install bandit safety
 
       - name: Run Bandit scan
         run: bandit -r src/ -c pyproject.toml -f json -o bandit-results.json
@@ -168,21 +176,14 @@ jobs:
         with:
           python-version: "${{ env.PYTHON_VERSION }}"
 
-      - name: Cache Python dependencies
-        uses: actions/cache@v4
+      - name: Install UV
+        uses: astral-sh/setup-uv@v5
         with:
-          path: |
-            ~/.cache/pip
-            .pytest_cache
-            ~/.cache/torch
-            ~/.cache/huggingface
-          key: ${{ runner.os }}-python-${{ hashFiles('pyproject.toml') }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-python-${{ hashFiles('pyproject.toml') }}-
-            ${{ runner.os }}-python-
+          enable-cache: true
+          cache-dependency-glob: "pyproject.toml"
 
       - name: Install Python dependencies
-        run: pip install -e .[dev]
+        run: uv pip install -e .[dev]
 
       - name: Run Ruff format check
         run: ruff format "src/" "tests/"
@@ -214,6 +215,7 @@ jobs:
         with:
           path: |
             ~/.cache/pip
+            ~/.cache/pre-commit
             .pytest_cache
             ~/.cache/torch
             ~/.cache/huggingface
@@ -221,6 +223,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-python-${{ hashFiles('pyproject.toml') }}-
             ${{ runner.os }}-python-
+
+      - name: Install UV
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+          cache-dependency-glob: "pyproject.toml"
 
       - name: Install test dependencies
         run: |
@@ -269,10 +277,15 @@ jobs:
         with:
           python-version: "${{ env.PYTHON_VERSION }}"
 
+      - name: Install UV
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+          cache-dependency-glob: "pyproject.toml"
+
       - name: Install semantic-release
         run: |
-          python -m pip install --upgrade pip
-          pip install python-semantic-release
+          uv pip install python-semantic-release
 
       - name: Configure Git
         run: |
